Fixing tables - too much space before. Also adding offerings mockup

--- a/static/styles.css
+++ b/static/styles.css
@@ -352,6 +352,13 @@ ul{
     border-style: solid;
 }
 
+.borderSelected{
+    border: yellow;
+    border-radius: 8px;
+    border-width: 8px;
+    border-style: solid;
+}
+
 .itemBorderCommon{
     border: var(--borderWidth) solid var(--borderCommon);
 }
